<resources>
    <string name="app_name">Cosmostation</string>
    <string name="db_password" translatable="false">wannabit</string>
    <string name="url_moon_pay" translatable="false">https://buy.moonpay.io</string>
    <string name="url_station_old" translatable="false">https://api-wallet.cosmostation.io/</string>
    <string name="url_station" translatable="false">https://api-utility.cosmostation.io/</string>
    <string name="url_station_testnet" translatable="false">https://api-office.cosmostation.io/utility/</string>
    <string name="url_mintscan" translatable="false">https://api.mintscan.io/</string>
    <string name="url_main_bnb" translatable="false">https://dex.binance.org/</string>
    <string name="url_lcd_kava_main" translatable="false">https://lcd-kava-app.cosmostation.io/</string>
    <string name="url_lcd_certik_main" translatable="false">https://lcd-certik-app.cosmostation.io/</string>
    <string name="url_lcd_ok" translatable="false">https://exchainrpc.okex.org/okexchain/v1/</string>
    <string name="key_mnemonic" translatable="false">MNEMONIC_KEY</string>
    <string name="key_private" translatable="false">PRIVATE_KEY</string>
    <string name="key_password" translatable="false">PASSWORD_KEY</string>
    <string name="str_atom_c" translatable="false">ATOM</string>
    <string name="str_iris_c" translatable="false">IRIS</string>
    <string name="str_photon_c" translatable="false">PHOTINO</string>
    <string name="str_kava_c" translatable="false">KAVA</string>
    <string name="str_iov_c" translatable="false">IOV</string>
    <string name="str_band_c" translatable="false">BAND</string>
    <string name="str_ok_c" translatable="false">OKT</string>
    <string name="str_bnb_c" translatable="false">BNB</string>
    <string name="str_btc_c" translatable="false">BTC</string>
    <string name="str_ctk_c" translatable="false">CTK</string>
    <string name="str_scrt_c" translatable="false">SCRT</string>
    <string name="str_akt_c" translatable="false">AKT</string>
    <string name="str_xprt_c" translatable="false">XPRT</string>
    <string name="str_dvpn_c" translatable="false">DVPN</string>
    <string name="str_fet_c" translatable="false">FET</string>
    <string name="str_cro_c" translatable="false">CRO</string>
    <string name="str_sif_c" translatable="false">ROWAN</string>
    <string name="str_ki_c" translatable="false">XKI</string>
    <string name="str_rizon_c" translatable="false">ATOLO</string>
    <string name="str_medi_c" translatable="false">MED</string>
    <string name="str_althea_c" translatable="false">ALTG</string>
    <string name="str_osmosis_c" translatable="false">OSMO</string>
    <string name="str_uion_c" translatable="false">ION</string>
    <string name="str_umee_c" translatable="false">UMEE</string>
    <string name="str_ngm_c" translatable="false">NGM</string>
    <string name="str_axl_c" translatable="false">AXL</string>
    <string name="str_juno_c" translatable="false">JUNO</string>
    <string name="str_regen_c" translatable="false">REGEN</string>
    <string name="str_bitcanna_c" translatable="false">BCNA</string>
    <string name="str_stargaze_c" translatable="false">STARS</string>
    <string name="str_grabridge_c" translatable="false">GRAVITON</string>
    <string name="str_comdex_c" translatable="false">CMDX</string>
    <string name="str_inj_c" translatable="false">INJ</string>
    <string name="str_bitsong_c" translatable="false">BTSG</string>
    <string name="str_desmos_c" translatable="false">DSM</string>
    <string name="str_lum_c" translatable="false">LUM</string>
    <string name="str_chihuahua_c" translatable="false">HUAHUA</string>
    <string name="str_konstellation_c" translatable="false">DARC</string>
    <string name="str_evmos_c" translatable="false">EVMOS</string>
    <string name="str_cudos_c" translatable="false">CUDOS</string>
    <string name="str_provenance_c" translatable="false">HASH</string>
    <string name="str_cerberus_c" translatable="false">CRBRUS</string>
    <string name="str_omniflix_c" translatable="false">FLIX</string>
    <string name="str_crescent_c" translatable="false">CRE</string>
    <string name="str_muon_c" translatable="false">MUON</string>
    <string name="str_bif_c" translatable="false">BIF</string>
    <string name="str_cre_c" translatable="false">CRE</string>
    <string name="str_bcre_c" translatable="false">BCRE</string>
    <string name="str_mantle_c" translatable="false">MNTL</string>
    <string name="str_station_c" translatable="false">ISS</string>
    <string name="str_nym_c" translatable="false">NYM</string>
    <string name="str_nyx_c" translatable="false">NYX</string>
    <string name="str_create_swap_memo_c" translatable="false">Create Atomic Swap via Cosmostation Wallet</string>
    <string name="str_claim_swap_memo_c" translatable="false">Claim Atomic Swap via Cosmostation Wallet</string>
    <string name="str_refund_swap_memo_c" translatable="false">Refund Atomic Swap via Cosmostation Wallet</string>
    <string name="str_cosmos_time_format" translatable="false">yyyy-MM-dd<![CDATA["'"]]>T<![CDATA["'"]]>HH:mm:ss.SSS</string>
    <string name="str_block_time_format" translatable="false"><![CDATA[yyyy-MM-dd\'T\'HH:mm:ss.SSSSSSSSS\'Z\']]></string>
    <string name="str_tx_time_format" translatable="false"><![CDATA[yyyy-MM-dd\'T\'HH:mm:ss\'Z\']]></string>
    <string name="str_vote_time_format" translatable="false"><![CDATA[yyyy-MM-dd\'T\'HH:mm:ss.SSS\'Z\']]></string>
    <string name="str_cosmos_main_net" translatable="false">Cosmos</string>
    <string name="str_cosmos_test_net_12k" translatable="false">COSMOS Testnet (GAIA 12k)</string>
    <string name="str_cosmos_test_net_13k" translatable="false">COSMOS Testnet (GAIA 13k)</string>
    <string name="str_iris_main_net" translatable="false">Iris</string>
    <string name="str_bnb_main_net" translatable="false">Binance</string>
    <string name="str_iov_main_net" translatable="false">Starname</string>
    <string name="str_kava_main_net" translatable="false">Kava</string>
    <string name="str_band_main_net" translatable="false">Band</string>
    <string name="str_persis_main_net" translatable="false">Persistence</string>
    <string name="str_secret_main_net" translatable="false">Secret</string>
    <string name="str_certik_main_net" translatable="false">Certik</string>
    <string name="str_akash_main_net" translatable="false">Akash</string>
    <string name="str_okex_main_net" translatable="false">OKC</string>
    <string name="str_sentinel_main_net" translatable="false">Sentinel</string>
    <string name="str_fetch_main_net" translatable="false">Fetch.ai</string>
    <string name="str_crypto_main_net" translatable="false">Crypto.org</string>
    <string name="str_sif_main_net" translatable="false">SifChain</string>
    <string name="str_ki_main_net" translatable="false">Ki Foundation</string>
    <string name="str_osmosis_main_net" translatable="false">Osmosis</string>
    <string name="str_medi_main_net" translatable="false">Medibloc</string>
    <string name="str_emoney_main_net" translatable="false">Emoney</string>
    <string name="str_rizon_main_net" translatable="false">Rizon</string>
    <string name="str_juno_main_net" translatable="false">Juno</string>
    <string name="str_regen_main_net" translatable="false">Regen</string>
    <string name="str_bitcanna_main_net" translatable="false">Bitcanna</string>
    <string name="str_althea_main_net" translatable="false">Althea</string>
    <string name="str_stargaze_main_net" translatable="false">Stargaze</string>
    <string name="str_grabridge_main_net" translatable="false">Gravity Bridge</string>
    <string name="str_comdex_main_net" translatable="false">Comdex</string>
    <string name="str_inj_main_net" translatable="false">Injective</string>
    <string name="str_bitsong_main_net" translatable="false">Bitsong</string>
    <string name="str_desmos_main_net" translatable="false">Desmos</string>
    <string name="str_lum_main_net" translatable="false">Lum</string>
    <string name="str_chihuahua_main_net" translatable="false">Chihuahua</string>
    <string name="str_axelar_main_net" translatable="false">Axelar</string>
    <string name="str_konstellation_main_net" translatable="false">Konstellation</string>
    <string name="str_umee_main_net" translatable="false">Umee</string>
    <string name="str_evmos_main_net" translatable="false">Evmos</string>
    <string name="str_cudos_main_net" translatable="false">Cudos</string>
    <string name="str_provenance_main_net" translatable="false">Provenance</string>
    <string name="str_cerberus_main_net" translatable="false">Cerberus</string>
    <string name="str_omniflix_main_net" translatable="false">Omniflix</string>
    <string name="str_crescent_main_net" translatable="false">Crescent</string>
    <string name="str_mantle_main_net" translatable="false">AssetMantle</string>
    <string name="str_station_test_net" translatable="false">Station</string>
    <string name="str_nyx_main_net" translatable="false">Nyx</string>
    <string name="str_cosmos_test_net" translatable="false">StarGate Testnet</string>
    <string name="str_iris_test_net" translatable="false">Bifrost Testnet</string>
    <string name="str_bnb_test_net" translatable="false">Binance Testnet</string>
    <string name="str_kava_test_net" translatable="false">Kava Testnet</string>
    <string name="str_iov_test_net" translatable="false">Starname Testnet</string>
    <string name="str_ok_test_net" translatable="false">Okex Testnet</string>
    <string name="str_certik_test_net" translatable="false">Certik Testnet</string>
    <string name="str_rizon_test_net" translatable="false">Rizon Testnet</string>
    <string name="str_medi_test_net" translatable="false">Medibloc Testnet</string>
    <string name="str_althea_test_net" translatable="false">Althea Testnet</string>
    <string name="str_umee_test_net" translatable="false">Umee Testnet</string>
    <string name="str_axelar_test_net" translatable="false">Axelar Testnet</string>
    <string name="str_crescent_test_net" translatable="false">Crescent Testnet</string>
    <string name="str_next">Next</string>
    <string name="str_confirm">Confirm</string>
    <string name="str_paste">Paste</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_continue">Continue</string>
    <string name="str_starname_recipient_address">insert *starname or recipient address</string>
    <string name="str_no_proposal">No Proposals</string>
    <string name="str_wallet">Wallet</string>
    <string name="str_proposal_list">Proposal List</string>
    <string name="str_vote_multi">Multi Vote</string>
    <string name="str_sorting_s">Sorting</string>
    <string name="str_sorting_by_name">By Name</string>
    <string name="str_sorting_by_power">By Voting Power</string>
    <string name="str_sorting_by_yield">By APR</string>
    <string name="str_qr_code">Scan</string>
    <string name="str_reward_address_change_confirm_title">Double Check!</string>
    <string name="str_reward_address_change_confirm_msg">You can change reward recipient address.\nAfter change this, every claimed rewards are going to changed address. \nPlease confirm you have full authority with to change address.</string>
    <string name="str_starname_confirm_title">StarName Found</string>
    <string name="str_starname_confirm_msg">A matched address was found. Would you like to send to this address? \n\n\n%1$s\n\n%2$s</string>
    <string name="str_select_ibc_address">Recipient Address</string>
    <string name="str_ibc_recipient_chain">Recipient Chain</string>
    <string name="str_ibc_transfer_title">IBC Transfer</string>
    <string name="str_ibc_transfer_msg1">IBC transactions are NOT supported on centralized exchanges.</string>
    <string name="str_ibc_transfer_msg2">Transfer your asset back to its origin chain by IBC before sending it to a centralized exchange.</string>
</resources>