<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/space_14">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box_white2_border"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            style="@style/font_rm_17_black_daynight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_24"
            android:gravity="center"
            android:text="@string/str_starname_confirm_title" />

        <TextView
            android:id="@+id/starname_info"
            style="@style/font_rr_12_black_daynight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10"
            android:gravity="center"
            android:text="@string/str_starname_confirm_msg" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="@dimen/space_24"
            android:background="@color/colorGray4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_nega"
                style="@style/font_rr_14_black_daynight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorTrans"
                android:text="@string/str_cancel"
                android:textAllCaps="false" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/colorGray4" />

            <Button
                android:id="@+id/btn_posi"
                style="@style/font_rr_14_black_daynight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorTrans"
                android:text="@string/str_confirm"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>

