<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/space_32">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_24"
            style="@style/font_ss_17_gray8"
            android:gravity="center"
            android:text="@string/str_reward_address_change_confirm_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_12"
            android:layout_marginLeft="@dimen/space_40"
            android:layout_marginRight="@dimen/space_40"
            style="@style/font_ss_12_gray1"
            android:gravity="center"
            android:text="@string/str_reward_address_change_confirm_msg"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="@dimen/space_32"
            android:background="@color/colorGray10"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_nega"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:background="@drawable/btn_dia_white_left"
                style="@style/font_ss_14_gray8"
                android:text="@string/str_cancel"/>
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/colorGray10"/>
            <Button
                android:id="@+id/btn_posi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:background="@drawable/btn_dia_white_right"
                style="@style/font_ss_14_gray8"
                android:text="@string/str_continue"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>