<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_16"
        android:layout_marginRight="@dimen/space_16"
        android:orientation="vertical">

        <TextView
            style="@style/font_rr_12_gray1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_ibc_recipient_chain" />

        <RelativeLayout
            android:id="@+id/btn_to_chain_list"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_50"
            android:layout_marginTop="@dimen/space_4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_50"
                android:background="@drawable/btn_trans_with_border" />

            <ImageView
                android:id="@+id/img_to_chain"
                android:layout_width="@dimen/space_32"
                android:layout_height="@dimen/space_32"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/space_4" />

            <TextView
                android:id="@+id/txt_to_chain"
                style="@style/font_rr_14_black_daynight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/space_4"
                android:layout_toRightOf="@+id/img_to_chain" />

            <ImageView
                android:id="@+id/img_send_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/space_8"
                android:layout_marginRight="@dimen/space_16"
                android:src="@drawable/arrow_down_gr" />
        </RelativeLayout>


        <TextView
            style="@style/font_rr_12_gray1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_20"
            android:text="@string/str_select_ibc_address" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_4">

            <EditText
                android:id="@+id/receiver_account"
                style="@style/font_rr_12_black_daynight"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_50"
                android:background="@drawable/edittext_box"
                android:hint="@string/str_starname_recipient_address"
                android:imeOptions="actionNext"
                android:maxLength="60"
                android:paddingLeft="@dimen/space_10"
                android:paddingRight="@dimen/space_10"
                android:textColorHint="@color/colorGray1"
                android:textCursorDrawable="@drawable/white_cursor" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/space_36"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/space_36"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/btn_wallet"
                android:layout_width="0dp"
                android:layout_height="@dimen/space_36"
                android:layout_weight="1"
                android:background="@drawable/btn_trans_with_border"
                android:clickable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/list_ic" />

                <TextView
                    style="@style/font_rr_9_black_daynight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_4"
                    android:text="@string/str_wallet" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_qr"
                android:layout_width="0dp"
                android:layout_height="@dimen/space_36"
                android:layout_marginLeft="@dimen/space_4"
                android:layout_weight="1"
                android:background="@drawable/btn_trans_with_border"
                android:clickable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/qr_ic" />

                <TextView
                    style="@style/font_rr_9_black_daynight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_4"
                    android:text="@string/str_qr_code" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_paste"
                android:layout_width="0dp"
                android:layout_height="@dimen/space_36"
                android:layout_marginLeft="@dimen/space_4"
                android:layout_weight="1"
                android:background="@drawable/btn_trans_with_border2"
                android:clickable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/copy_ic" />

                <TextView
                    style="@style/font_rr_8_black_daynight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_4"
                    android:text="@string/str_paste" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ibc_layer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_control"
        android:layout_marginLeft="@dimen/space_32"
        android:layout_marginRight="@dimen/space_32"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/space_60"
            android:layout_height="@dimen/space_60"
            android:src="@drawable/icon_ibctransfer" />

        <TextView
            style="@style/font_rr_14_black_daynight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10"
            android:gravity="center"
            android:text="@string/str_ibc_transfer_title" />

        <TextView
            style="@style/font_rr_12_black_daynight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8"
            android:gravity="center"
            android:text="@string/str_ibc_transfer_msg1"
            android:textColor="@color/colorRed" />

        <TextView
            style="@style/font_rr_12_black_daynight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_ibc_transfer_msg2" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/space_16"
        android:layout_marginTop="@dimen/space_10"
        android:layout_marginRight="@dimen/space_16"
        android:layout_marginBottom="@dimen/space_24"
        android:background="@color/colorWhiteDayNight"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/font_rr_14_black_daynight"
            android:layout_width="0dp"
            android:layout_height="@dimen/space_45"
            android:layout_marginTop="@dimen/space_10"
            android:layout_marginRight="@dimen/space_4"
            android:layout_weight="1"
            android:background="@drawable/btn_trans_with_border"
            android:minHeight="@dimen/space_45"
            android:text="@string/str_cancel"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_next"
            style="@style/font_rr_14_photon_daynight"
            android:layout_width="0dp"
            android:layout_height="@dimen/space_45"
            android:layout_marginLeft="@dimen/space_4"
            android:layout_marginTop="@dimen/space_10"
            android:layout_weight="1"
            android:background="@drawable/btn_trans_with_photon_border"
            android:minHeight="@dimen/space_45"
            android:text="@string/str_next"
            android:textAllCaps="false" />
    </LinearLayout>
</RelativeLayout>